# libnss_dnsoverhttps

./: .gitignore  Cargo.toml  Makefile  build.rs
src/: consts.rs  lib.rs  log.rs  structs.rs  write.rs  write_addr.c
tests/: gethostbyname.rs  gethostbyname3.rs  gethostbyname4.rs
