[package]
name = "nss_dnsoverhttps"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

[lib]
crate-type = [ "rlib", "cdylib" ]

[dependencies]
dnsoverhttps = "0.1.0"
log = { version = "0.4.1", optional = true }

[dev-dependencies]
env_logger = "0.5.3"

[profile.release]
lto = true
panic = "abort"
